main.css
/* ... */
.backgroundContainer {
    /* background-color: #010e18 */
    background: url("https://dennis-stinauer.de/cloud/jellyfish/noise.svg");
    animation: movebgright 20s linear infinite;
    background-size: 69vw;
}

.backgroundContainer::after {
    content: "";
    position: inherit;
    width: 100%;
    height: 100%;
    opacity: 0.9;
    background: linear-gradient(to right, rgb(237, 34, 36), rgb(243, 91, 34), rgb(249, 150, 33), rgb(245, 193, 30), rgb(241, 235, 27) 27%, rgb(241, 235, 27), rgb(241, 235, 27) 33%, rgb(99, 199, 32), rgb(12, 155, 73), rgb(33, 135, 141), rgb(57, 84, 165), rgb(97, 55, 155), rgb(147, 40, 142), rgb(237, 34, 36));
    animation: movebgright 20s linear infinite;
    mix-blend-mode: hard-light;
}

.backgroundContainer.withBackdrop {
    background: transparent !important
}

.backdropContainer {
    filter: blur(10px) brightness(70%) saturate(110%) contrast(130%);
    mask-image: linear-gradient(180deg, #000, transparent);
    -webkit-mask-image: linear-gradient(180deg, #000, transparent)
}

.videoPlayerContainer{
    z-index: 1000;
}

.withTabs .content-primary {
    padding-top: 1em !important
}

.scrollY {
    mask-image: linear-gradient(180deg, transparent, #000 1em calc(100% - 1em), transparent);
    -webkit-mask-image: linear-gradient(180deg, transparent, #000 1em calc(100% - 1em), transparent);
    padding: 1em 0
}

.pageTabContent {
    padding: 0 1em
}

.appfooter {
    -webkit-backdrop-filter: blur(30px);
    backdrop-filter: blur(30px);
    background: rgba(0, 0, 0, .65)
}

::-moz-selection {
    background: var(--accent2-light)
}

::selection {
    background: var(--accent2-light)
}

.skinHeader {
    background: transparent !important;
    position: static
}

.layout-desktop body,
.layout-mobile body {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    overflow: hidden !important
}

div[data-role=page].page {
    height: calc(100% + 1.2em);
    mask-image: linear-gradient(0deg, transparent, #000 1em calc(100% - 1em), transparent);
    -webkit-mask-image: linear-gradient(0deg, transparent, #000 1em calc(100% - 1em), transparent);
    overflow: hidden visible;
    padding: 1.2em 0 !important;
    position: absolute
}

.mainAnimatedPages.skinBody {
    height: 100%;
    position: relative
}

.selectionCommandsPanel {
    -webkit-backdrop-filter: blur(10px);
    backdrop-filter: blur(10px);
    background: rgba(0, 0, 0, .75);
    box-shadow: 0 0 15px #000
}

.emby-button {
    position: relative
}

.emby-button.raised[is=emby-linkbutton]:not(.emby-tab-button),
.emby-button[is=emby-button]:not(.emby-tab-button) {
    background: #063660;
    border-radius: 100vh;
    overflow: hidden
}

.emby-button.raised[is=emby-linkbutton]:not(.emby-tab-button):after,
.emby-button[is=emby-button]:not(.emby-tab-button):after {
    background: linear-gradient(130deg, var(--accent1-light), var(--accent2-light));
    content: "";
    height: 100%;
    left: 0;
    opacity: 0;
    position: absolute;
    top: 0;
    transition: opacity .15s linear;
    width: 100%;
    z-index: -1
}

.emby-button.raised[is=emby-linkbutton]:not(.emby-tab-button):focus:after,
.emby-button.raised[is=emby-linkbutton]:not(.emby-tab-button):hover:after,
.emby-button[is=emby-button]:not(.emby-tab-button):focus:after,
.emby-button[is=emby-button]:not(.emby-tab-button):hover:after {
    opacity: 1
}

.emby-button.emby-collapsible-button {
    background: transparent !important;
    border: 0 !important;
    box-shadow: none
}

.emby-button.emby-collapsible-button:after {
    display: none !important
}

.paper-icon-button-light {
    border-radius: 10px
}

.skipIntro {
    background: #063660 !important;
    border: none;
    border-radius: 100vh;
    bottom: 12em;
    box-shadow: 0 0 15px #000;
    color: #fff !important;
    font-size: 1.2em;
    overflow: hidden;
    padding: .5em;
    right: 8em
}

.skipIntro:hover {
    box-shadow: 0 0 15px #000 !important
}

.skipIntro:after {
    background: linear-gradient(130deg, var(--accent1-light), var(--accent2-light));
    content: "";
    height: 100%;
    left: 0;
    opacity: 0;
    position: absolute;
    top: 0;
    transition: opacity .15s linear;
    width: 100%;
    z-index: 0
}

.skipIntro .paper-icon-button-light {
    color: #fff !important;
    z-index: 1
}

.skipIntro:focus:after,
.skipIntro:hover:after {
    opacity: 1
}

.dialog .emby-button:not(.cardImageContainer, .actionSheetMenuItem).button-delete {
    background: #f70000 !important
}

.emby-scroller {
    mask-image: linear-gradient(270deg, transparent, #000 .5em calc(100% - .5em), transparent);
    -webkit-mask-image: linear-gradient(270deg, transparent, #000 .5em calc(100% - .5em), transparent)
}

.card {
    contain: none !important
}

.card.overflowSquareCard .cardScalable {
    aspect-ratio: 1
}

.card.overflowSquareCard .cardImageContainer:after {
    background-size: contain !important
}

.cardOverlayContainer {
    background: rgba(0, 0, 0, .7)
}

.cardImageIcon {
    background: linear-gradient(130deg, var(--accent1-light), var(--accent2-light));
    background-clip: text;
    -webkit-background-clip: text;
    color: transparent
}

.cardScalable {
    aspect-ratio: auto;
    border-radius: 10px 10px 0 0;
    box-shadow: none !important;
    overflow: hidden;
    position: relative;
    width: calc(100% + 1px)
}

.cardScalable>* {
    border-radius: 0 !important;
    box-shadow: none !important;
    width: 100%
}

.cardScalable:not(.imageEditorCard) .cardImageContainer:after,
.cardScalable:not(.imageEditorCard) .cardImageContainer:before {
    background: inherit;
    content: "";
    position: absolute
}

.cardScalable:not(.imageEditorCard) .cardImageContainer:after {
    background-size: cover;
    height: 100%;
    left: 0;
    transform: scale(1);
    transition: transform .15s ease-in-out;
    width: 100%;
    z-index: -1
}
/* ... */

